Hiveplot Layout Latest Version

--- a/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
+++ b/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
@@ -2,10 +2,29 @@ OpenIDE-Module-Name=HiveplotLayout
 name=HiveplotLayout
 description=Hiveplot layout implementation for Gephi
 
-
 hiveplot.area.name=Canvas Area
 hiveplot.area.desc=Boundary of the area to draw the graph 
 
+hiveplot.axisAssign.name=Axis Assignment Property
+hiveplot.axisAssign.desc=The column used to assign nodes to the axes
+
+hiveplot.axisOrder.name=On-Axis Order Property
+hiveplot.axisOrder.desc=The column used to sort nodes on axes
 
 hiveplot.numAxes.name=Number of Axes
 hiveplot.numAxes.desc=The number of axes that nodes can be assigned to
+
+hiveplot.parameter1.name=1st Parameter
+hiveplot.parameter1.desc=Label attribute for the first axis or the first upper limit for the node order property
+
+hiveplot.parameter2.name=2nd Parameter
+hiveplot.parameter2.desc=Label attribute for the second axis or the second upper limit for the node order property
+
+hiveplot.parameter3.name=3rd Parameter
+hiveplot.parameter3.desc=Label attribute for the third axis or the third upper limit for the node order property
+
+hiveplot.parameter4.name=4th Parameter
+hiveplot.parameter4.desc=Label attribute for the fourth axis or the fourth upper limit for the node order property
+
+hiveplot.parameter5.name=5th Parameter
+hiveplot.parameter5.desc=Label attribute for the fifth axis or the fifth upper limit for the node order property
