Hiveplot input panel is completely renewed
Input panel for the Hiveplot Layout is completely renewed with a
dynamical panel for custom input

--- a/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
+++ b/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
@@ -28,3 +28,18 @@ hiveplot.parameter4.desc=Label attribute for the fourth axis or the fourth upper
 
 hiveplot.parameter5.name=5th Parameter
 hiveplot.parameter5.desc=Label attribute for the fifth axis or the fifth upper limit for the node order property
+HivePanel.label1.text=Press the refresh button to bring generated columns
+HivePanel.label1.AccessibleContext.accessibleName=label2
+HivePanel.label1.AccessibleContext.accessibleDescription=Press the refresh button to bring generated columns
+HivePanel.label2.text=Axis Assignment Property
+HivePanel.label2.AccessibleContext.accessibleName=label2
+HivePanel.label2.AccessibleContext.accessibleDescription=Axis Assignment Property
+HivePanel.jRadioButton1.text=Numerical/Nominal
+HivePanel.label3.text=On-axis Ordering Property
+HivePanel.label3.AccessibleContext.accessibleName=label3
+HivePanel.jRadioButton1.AccessibleContext.accessibleDescription=Numerical/Nominal
+HivePanel.label3.AccessibleContext.accessibleDescription=On-axis Ordering Property
+HivePanel.label=Refresh
+HivePanel.button1.AccessibleContext.accessibleDescription=
+HivePanel.jComboBox1.AccessibleContext.accessibleName=
+HivePanel.label4.text=Select the radio button if ordering is nominal
