--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,9 +4,13 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
+project.org.maktas.beansbinding=beansbinding
+project.org.maktas.hiveplot=HiveplotModule
 project.org.myname.myfirstplugin=MyFirstModule
-run.args.extra=-J-Xms256m -J-Xmx1000m -J-Dsun.java2d.noddraw=true -J-Dsun.awt.noerasebackground=true
+run.args.extra=-J-Xms256m -J-Xmx1000m -J-Dsun.java2d.noddraw=true -J-Dsun.awt.noerasebackground=true --locale en:US
 app.name=gephi
 branding.token=${app.name}
 modules=\
-    ${project.org.myname.myfirstplugin}
+    ${project.org.myname.myfirstplugin}:\
+    ${project.org.maktas.hiveplot}:\
+    ${project.org.maktas.beansbinding}
