A small bugfix for slider input values
Slider input minimum value was set to global minimum when the number of
axes are increased. In this bugfix, it is fixed to the previous slider's
minimum value.

--- a/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
+++ b/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
@@ -1,4 +1,5 @@
-OpenIDE-Module-Name=HiveplotLayout
+OpenIDE-Module-Display-Category=Layout
+OpenIDE-Module-Name=Hiveplot Layout
 name=HiveplotLayout
 description=Hiveplot layout implementation for Gephi
 
@@ -43,3 +44,4 @@ HivePanel.label=Refresh
 HivePanel.button1.AccessibleContext.accessibleDescription=
 HivePanel.jComboBox1.AccessibleContext.accessibleName=
 HivePanel.label4.text=Select the radio button if ordering is nominal
+OpenIDE-Module-Short-Description=a Hiveplot Layout implementation for Gephi
