--- a/HiveplotModule/nbproject/project.properties
+++ b/HiveplotModule/nbproject/project.properties
@@ -1,4 +1,5 @@
 javac.source=1.6
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=../../../../Desktop/License.txt
 nbm.homepage=https://github.com/maktas
 nbm.module.author=Maktas
