--- a/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
+++ b/HiveplotModule/src/org/maktas/hiveplot/Bundle.properties
@@ -3,7 +3,8 @@ OpenIDE-Module-Long-Description=\
     The Hiveplot Layout is useful for assigning the nodes on the graph to the axes using an assignment property and sorting the nodes on the axes using an on-axis ordering property. \n\
     The user -after running some statistics- presses the refresh button to get new generated columns and selects the axis assignment property and on-axis ordering property. \
     S/he then selects the number of axes from the slider, and then selects the parameters for axis assignment. \
-    For example if the user wants degree for axis assignment and modularity for on-axis ordering property s/he selects 'Degree' in the first combo box and if s/he wants 3 axes for the graph and that first axis containing nodes having values less than 'a', second axis between 'a' and 'b' and third axis greater than 'b',  s/he selects 3 in the number of axes slider, 'a' in the first parameter input slider and 'b' in the second parameter slider.
+    For example if the user wants degree for axis assignment and modularity for on-axis ordering property s/he selects 'Degree' in the first combo box and 'Modularity' in the second combo box. \
+    Iif s/he wants 3 axes for the graph and that first axis containing nodes having values less than 'a', second axis between 'a' and 'b' and third axis greater than 'b',  s/he selects 3 in the number of axes slider, 'a' in the first parameter input slider and 'b' in the second parameter slider.
 OpenIDE-Module-Name=Hiveplot Layout
 name=HiveplotLayout
 description=Hiveplot layout implementation for Gephi
